// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalenderMonth /> tests calls render props with given month and its days 1`] = `
Array [
  Array [
    Object {
      "date": 2016-12-31T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-01T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-02T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-03T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-04T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-05T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-06T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-07T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-08T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-09T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-10T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-11T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-12T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-13T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-14T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-15T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-16T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-17T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-18T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-19T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-20T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-21T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-22T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-23T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-24T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-25T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-26T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-27T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-28T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-29T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-30T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-31T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-01T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-02T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-03T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
  ],
]
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 1`] = `
----------
0 (--)
----------
1 (--)
----------
2 (--)
----------
3 (--)
----------
4 (--)
----------
5 (--)
----------
6 (--)
----------
7 (--)
----------
8 (--)
----------
9 (--)
----------
10 (--)
----------
11 (--)
----------
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 2`] = `
----------
1969 (--)
----------
1970 (--)
----------
1971 (--)
----------
1972 (--)
----------
1973 (--)
----------
1974 (--)
----------
1975 (--)
----------
1976 (--)
----------
1977 (--)
----------
1978 (--)
----------
1979 (--)
----------
1980 (--)
----------
1981 (--)
----------
1982 (--)
----------
1983 (--)
----------
1984 (--)
----------
1985 (--)
----------
1986 (--)
----------
1987 (--)
----------
1988 (--)
----------
1989 (--)
----------
1990 (--)
----------
1991 (--)
----------
1992 (--)
----------
1993 (--)
----------
1994 (--)
----------
1995 (--)
----------
1996 (--)
----------
1997 (--)
----------
1998 (--)
----------
1999 (--)
----------
2000 (--)
----------
2001 (--)
----------
2002 (--)
----------
2003 (--)
----------
2004 (--)
----------
2005 (--)
----------
2006 (--)
----------
2007 (--)
----------
2008 (--)
----------
2009 (--)
----------
2010 (--)
----------
2011 (--)
----------
2012 (--)
----------
2013 (--)
----------
2014 (--)
----------
2015 (--)
----------
2016 (--)
----------
2017 (--)
----------
2018 (--)
----------
2019 (--)
----------
2020 (--)
----------
2021 (--)
----------
2022 (--)
----------
2023 (--)
----------
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 3`] = `
----------
0 (-d)
----------
1 (-d)
----------
2 (--)
----------
3 (--)
----------
4 (--)
----------
5 (--)
----------
6 (--)
----------
7 (--)
----------
8 (--)
----------
9 (--)
----------
10 (--)
----------
11 (-d)
----------
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 4`] = `
----------
2017 (--)
----------
`;

exports[`<CalenderMonth /> tests minDate and maxDate get priorty over startDate and endDate 1`] = `
Array [
  Array [
    Object {
      "date": 2016-12-31T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-01T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-02T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-03T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-04T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-05T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-06T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-07T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-08T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-09T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-10T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-11T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-12T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-13T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-14T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-15T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-16T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-17T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-18T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-19T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-20T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-21T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-22T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-23T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-24T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-25T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-26T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-27T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-28T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-29T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-30T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-31T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-01T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-02T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-03T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
  ],
]
`;

exports[`<CalenderMonth /> tests render prop has proper days selected when given 1`] = `
Array [
  Array [
    Object {
      "date": 2016-12-31T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-01T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-02T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-03T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-04T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-05T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-06T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-07T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-08T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-09T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-10T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": true,
    },
    Object {
      "date": 2017-01-11T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-12T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-13T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-14T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-15T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-16T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-17T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-18T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-19T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 2017-01-20T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": true,
    },
  ],
  Array [
    Object {
      "date": 2017-01-21T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-22T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-23T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-24T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-25T18:30:00.000Z,
      "disabled": false,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-26T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-27T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 2017-01-28T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-29T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-30T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-01-31T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-01T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-02T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 2017-02-03T18:30:00.000Z,
      "disabled": true,
      "inCurrentMonth": false,
      "inRange": false,
      "selected": false,
    },
  ],
]
`;

exports[`<CalenderMonth /> tests showDropdowns gives apt props 1`] = `
----------
0 (--)
----------
1 (--)
----------
2 (--)
----------
3 (--)
----------
4 (--)
----------
5 (--)
----------
6 (--)
----------
7 (--)
----------
8 (--)
----------
9 (--)
----------
10 (--)
----------
11 (--)
----------
`;

exports[`<CalenderMonth /> tests showDropdowns gives apt props 2`] = `
----------
1969 (--)
----------
1970 (--)
----------
1971 (--)
----------
1972 (--)
----------
1973 (--)
----------
1974 (--)
----------
1975 (--)
----------
1976 (--)
----------
1977 (--)
----------
1978 (--)
----------
1979 (--)
----------
1980 (--)
----------
1981 (--)
----------
1982 (--)
----------
1983 (--)
----------
1984 (--)
----------
1985 (--)
----------
1986 (--)
----------
1987 (--)
----------
1988 (--)
----------
1989 (--)
----------
1990 (--)
----------
1991 (--)
----------
1992 (--)
----------
1993 (--)
----------
1994 (--)
----------
1995 (--)
----------
1996 (--)
----------
1997 (--)
----------
1998 (--)
----------
1999 (--)
----------
2000 (--)
----------
2001 (--)
----------
2002 (--)
----------
2003 (--)
----------
2004 (--)
----------
2005 (--)
----------
2006 (--)
----------
2007 (--)
----------
2008 (--)
----------
2009 (--)
----------
2010 (--)
----------
2011 (--)
----------
2012 (--)
----------
2013 (--)
----------
2014 (--)
----------
2015 (--)
----------
2016 (--)
----------
2017 (--)
----------
2018 (--)
----------
2019 (--)
----------
2020 (--)
----------
2021 (--)
----------
2022 (--)
----------
2023 (--)
----------
`;
